# Wikiextractor-V2

./: pyproject.toml
wikiextractor/: WikiExtractor.py
wikiextractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
