[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiextractor"
dynamic = ["version"]
authors = [
    {name = "Giuseppe Attardi", email = "attardi@gmail.com"},
]
description = "A tool for extracting plain text from Wikipedia dumps"
readme = "README.md"
license = {text = "GNU Affero General Public License"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "babel>=2.12.1",
    "pylatexenc>=2.10",
    "beautifulsoup4>=4.12.2",
]

[project.urls]
homepage = "https://github.com/attardi/wikiextractor"

[project.scripts]
wikiextractor = "wikiextractor.WikiExtractor:main"

[tool.setuptools]
packages = ["wikiextractor"]

[tool.setuptools.dynamic]
version = {attr = "wikiextractor.WikiExtractor.__version__"}
